-Aggiunto Punteggio.

- implementata coda