@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
 </head>
 
+
 <body>
+
     <h1 id="insert">
         Score:
+
     </h1>
+    <h1 id= "GameOver"></h1>
+
     <div id="container"></div>
     <script src="./phaser.js"></script>
     <script src="./snake.js"></script>
